# road-to-ai-engineer

./: .gitignore  .gitmodules  000-multi-threaded-concurrency.py  000-non-concurrency.py  000-single-threaded-concurrency.py  001-first_api_3.py  002-path_operation_crud-1.py  003-request-body-pydantic-1.py  003-request-body-pydantic-2.py  004-response-model.py  004-return-type.py  005-annotated_and_field.py  010-static_files.py  README.md  requirements.txt
009-simple-database/: crud.py  database.py  main.py  models.py  schemas.py
advanced_fastapi/: dependency_injection_2.py
advanced_fastapi/dependency_injection/: dependency_injection_1.py
advanced_fastapi/oauth/: oauth2_2.py  oauth2_3.py
basic_fastapi/: 001-first_api_2.py  002-path_operation_crud-2.py  006-file-and-upload-file.py  007-middleware.py  README.md
basic_fastapi/009-simple-database/: database.py  main.py  requirements.txt  schemas.py
projects/oauth/: .env.example  README.md  main.py  requirements.txt
projects/oauth/auth/: config.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
projects/oauth/users/: routes.py
projects/simple_chatbot/: README.md  requirements.txt  simple_aio.py
projects/simple_chatbot/backend/: main.py
projects/simple_chatbot/frontend/: app.py
projects/simple_chatbot_youtube/: README.md  pyproject.toml
projects/simple_chatbot_youtube/backend/: main.py
projects/simple_chatbot_youtube/frontend/: app.py
